--- a/frontend/src/language/prs.json
+++ b/frontend/src/language/prs.json
@@ -59,7 +59,7 @@
   },
   "languageSelection": {
     "title": "زبان خود را انتخاب کنید",
-    "subtitle": "زبان مورد نظر خود را برای شروع سفر هوش مصنوعی انتخاب کنید",
+    "subtitle": "زبان مورد علاقه خود را انتخاب کنید تا سفر هوش مصنوعی خود را شروع کنید",
     "selectLanguage": "زبان خود را انتخاب کنید",
     "languageSelected": "زبان انتخاب شد",
     "configuringAI": "در حال پیکربندی هوش مصنوعی برای {{language}}...",
