Add comprehensive translations for business types, quick options, and welcome message to all language files and update FullChatPage to use translation keys

--- a/frontend/src/language/ar.json
+++ b/frontend/src/language/ar.json
@@ -73,13 +73,13 @@
     "getAnswers": "احصل على إجابات. بدون أوراق."
   },
   "chat": {
-    "title": "مساعد أوكلاند للذكاء الاصطناعي",
+    "title": "مساعد الذكاء الاصطناعي في أوكلاند",
     "subtitle": "مساعدة ذكية للشركات الصغيرة في أوكلاند",
     "placeholder": "اكتب رسالتك هنا...",
     "send": "إرسال",
-    "voiceInput": "إدخال صوتي",
-    "voiceOutput": "مخرجات صوتية",
-    "thinking": "جاري التفكير...",
+    "voiceInput": "إدخال الصوت",
+    "voiceOutput": "إخراج الصوت",
+    "thinking": "يفكر...",
     "newMessage": "رسالة جديدة",
     "clearChat": "مسح المحادثة",
     "exportChat": "تصدير المحادثة",
@@ -87,32 +87,84 @@
     "noMessages": "لا توجد رسائل بعد. ابدأ محادثة!",
     "messageError": "فشل في إرسال الرسالة. يرجى المحاولة مرة أخرى.",
     "aiThinking": "الذكاء الاصطناعي يفكر...",
-    "aiResponding": "الذكاء الاصطناعي يجيب...",
+    "aiResponding": "الذكاء الاصطناعي يستجيب...",
     "scrollToBottom": "التمرير إلى الأسفل",
     "copyMessage": "نسخ الرسالة",
-    "messageCopied": "تم نسخ الرسالة إلى الحافظة"
+    "messageCopied": "تم نسخ الرسالة إلى الحافظة",
+    "welcomeMessage": "أنا هنا لمساعدتك في التنقل في إدارة عملك في أوكلاند. اسألني أي شيء عن التراخيص والتصاريح واللوائح أو موارد الأعمال المحلية."
   },
-  "business": {
-    "businessType": "نوع العمل",
-    "restaurant": "مطعم",
-    "retail": "متجر تجزئة",
-    "service": "خدمة تجارية",
-    "manufacturing": "تصنيع",
-    "construction": "بناء",
-    "healthcare": "رعاية صحية",
-    "education": "تعليم",
-    "technology": "تكنولوجيا",
-    "consulting": "استشارات",
-    "other": "أخرى",
-    "selectBusinessType": "اختر نوع عملك",
-    "businessInfo": "معلومات العمل",
-    "businessName": "اسم العمل",
-    "businessAddress": "عنوان العمل",
-    "businessPhone": "هاتف العمل",
-    "businessEmail": "بريد العمل الإلكتروني",
-    "businessLicense": "رخصة العمل",
-    "permitRequired": "تصريح مطلوب",
-    "licenseRequired": "رخصة مطلوبة"
+  "businessTypes": {
+    "beautySalon": "أملك صالون تجميل",
+    "restaurant": "أملك مطعماً",
+    "retailStore": "أملك متجر بيع بالتجزئة",
+    "coffeeShop": "أملك مقهى",
+    "barbershop": "أملك صالون حلاقة",
+    "bakery": "أملك مخبزاً",
+    "gym": "أملك صالة رياضية",
+    "autoRepair": "أملك ورشة إصلاح سيارات",
+    "laundry": "أملك خدمة غسيل",
+    "petGrooming": "أملك عمل رعاية الحيوانات الأليفة",
+    "tattooParlor": "أملك استوديو وشم",
+    "nailSalon": "أملك صالون أظافر",
+    "photographyStudio": "أملك استوديو تصوير",
+    "consulting": "أملك عمل استشارات",
+    "daycare": "أملك مركز رعاية أطفال",
+    "cleaningService": "أملك خدمة تنظيف",
+    "foodTruck": "أملك شاحنة طعام",
+    "yogaStudio": "أملك استوديو يوغا",
+    "musicSchool": "أملك مدرسة موسيقى",
+    "danceStudio": "أملك استوديو رقص",
+    "artGallery": "أملك معرض فني",
+    "bookstore": "أملك مكتبة",
+    "florist": "أملك متجر زهور",
+    "jewelryStore": "أملك متجر مجوهرات",
+    "vintageShop": "أملك متجر كلاسيكي",
+    "techStartup": "أملك شركة ناشئة تقنية",
+    "dentalOffice": "أملك عيادة أسنان",
+    "lawFirm": "أملك مكتب محاماة",
+    "realEstate": "أملك عمل عقارات",
+    "insuranceAgency": "أملك وكالة تأمين",
+    "accountingFirm": "أملك شركة محاسبة",
+    "marketingAgency": "أملك وكالة تسويق",
+    "webDesign": "أملك عمل تصميم ويب",
+    "construction": "أملك عمل بناء",
+    "landscaping": "أملك عمل تنسيق حدائق",
+    "plumbing": "أملك عمل سباكة",
+    "electrical": "أملك عمل كهربائي",
+    "hvac": "أملك عمل تكييف وتهوية",
+    "roofing": "أملك عمل تسقيف",
+    "painting": "أملك عمل دهان",
+    "carpentry": "أملك عمل نجارة",
+    "other": "أملك نوع عمل آخر"
+  },
+  "quickOptions": {
+    "businessLicense": "رخصة تجارية",
+    "parkingRules": "قواعد وقوف السيارات",
+    "permits": "تصاريح",
+    "taxes": "ضرائب",
+    "zoning": "تقسيم المناطق",
+    "healthSafety": "الصحة والسلامة",
+    "employmentLaw": "قانون العمل",
+    "insurance": "تأمين",
+    "accessibility": "إمكانية الوصول",
+    "marketing": "تسويق",
+    "grants": "منح",
+    "utilities": "مرافق",
+    "inspections": "فحوصات",
+    "wasteDisposal": "التخلص من النفايات",
+    "fireSafety": "السلامة من الحريق",
+    "security": "أمن",
+    "buildingCodes": "رموز البناء",
+    "certifications": "شهادات",
+    "emergencies": "طوارئ",
+    "innovation": "ابتكار",
+    "networking": "شبكات الأعمال",
+    "financing": "تمويل الأعمال",
+    "legalHelp": "مساعدة قانونية",
+    "accounting": "خدمات محاسبية",
+    "technology": "دعم تقني",
+    "sustainability": "أعمال خضراء",
+    "exportImport": "تجارة دولية"
   },
   "permissions": {
     "title": "التصاريح والتراخيص",
