--- a/frontend/src/language/en.json
+++ b/frontend/src/language/en.json
@@ -96,7 +96,81 @@
     "aiResponding": "AI is responding...",
     "scrollToBottom": "Scroll to bottom",
     "copyMessage": "Copy message",
-    "messageCopied": "Message copied to clipboard"
+    "messageCopied": "Message copied to clipboard",
+    "welcomeMessage": "I'm here to help you navigate running your business in Oakland. Ask me anything about licenses, permits, regulations, or local business resources."
+  },
+  "businessTypes": {
+    "beautySalon": "I own a beauty salon",
+    "restaurant": "I own a restaurant",
+    "retailStore": "I own a retail store",
+    "coffeeShop": "I own a coffee shop",
+    "barbershop": "I own a barbershop",
+    "bakery": "I own a bakery",
+    "gym": "I own a gym",
+    "autoRepair": "I own an auto repair shop",
+    "laundry": "I own a laundry service",
+    "petGrooming": "I own a pet grooming business",
+    "tattooParlor": "I own a tattoo parlor",
+    "nailSalon": "I own a nail salon",
+    "photographyStudio": "I own a photography studio",
+    "consulting": "I own a consulting business",
+    "daycare": "I own a daycare center",
+    "cleaningService": "I own a cleaning service",
+    "foodTruck": "I own a food truck",
+    "yogaStudio": "I own a yoga studio",
+    "musicSchool": "I own a music school",
+    "danceStudio": "I own a dance studio",
+    "artGallery": "I own an art gallery",
+    "bookstore": "I own a bookstore",
+    "florist": "I own a florist shop",
+    "jewelryStore": "I own a jewelry store",
+    "vintageShop": "I own a vintage shop",
+    "techStartup": "I own a tech startup",
+    "dentalOffice": "I own a dental office",
+    "lawFirm": "I own a law firm",
+    "realEstate": "I own a real estate business",
+    "insuranceAgency": "I own an insurance agency",
+    "accountingFirm": "I own an accounting firm",
+    "marketingAgency": "I own a marketing agency",
+    "webDesign": "I own a web design business",
+    "construction": "I own a construction business",
+    "landscaping": "I own a landscaping business",
+    "plumbing": "I own a plumbing business",
+    "electrical": "I own an electrical business",
+    "hvac": "I own an HVAC business",
+    "roofing": "I own a roofing business",
+    "painting": "I own a painting business",
+    "carpentry": "I own a carpentry business",
+    "other": "I own another type of business"
+  },
+  "quickOptions": {
+    "businessLicense": "Business License",
+    "parkingRules": "Parking Rules",
+    "permits": "Permits",
+    "taxes": "Taxes",
+    "zoning": "Zoning",
+    "healthSafety": "Health & Safety",
+    "employmentLaw": "Employment Law",
+    "insurance": "Insurance",
+    "accessibility": "Accessibility",
+    "marketing": "Marketing",
+    "grants": "Grants",
+    "utilities": "Utilities",
+    "inspections": "Inspections",
+    "wasteDisposal": "Waste Disposal",
+    "fireSafety": "Fire Safety",
+    "security": "Security",
+    "buildingCodes": "Building Codes",
+    "certifications": "Certifications",
+    "emergencies": "Emergencies",
+    "innovation": "Innovation",
+    "networking": "Business Networking",
+    "financing": "Business Financing",
+    "legalHelp": "Legal Assistance",
+    "accounting": "Accounting Services",
+    "technology": "Technology Support",
+    "sustainability": "Green Business",
+    "exportImport": "International Trade"
   },
   "business": {
     "businessType": "Business Type",
