--- a/frontend/src/language/es.json
+++ b/frontend/src/language/es.json
@@ -89,36 +89,88 @@
     "newMessage": "Nuevo mensaje",
     "clearChat": "Limpiar chat",
     "exportChat": "Exportar chat",
-    "chatHistory": "Historial de chat",
+    "chatHistory": "Historial del chat",
     "noMessages": "Aún no hay mensajes. ¡Inicia una conversación!",
     "messageError": "Error al enviar mensaje. Inténtalo de nuevo.",
     "aiThinking": "La IA está pensando...",
     "aiResponding": "La IA está respondiendo...",
     "scrollToBottom": "Desplazarse hacia abajo",
     "copyMessage": "Copiar mensaje",
-    "messageCopied": "Mensaje copiado al portapapeles"
+    "messageCopied": "Mensaje copiado al portapapeles",
+    "welcomeMessage": "Estoy aquí para ayudarte a navegar por el funcionamiento de tu negocio en Oakland. Pregúntame cualquier cosa sobre licencias, permisos, regulaciones o recursos comerciales locales."
   },
-  "business": {
-    "businessType": "Tipo de negocio",
-    "restaurant": "Restaurante",
-    "retail": "Tienda minorista",
-    "service": "Servicio comercial",
-    "manufacturing": "Manufactura",
-    "construction": "Construcción",
-    "healthcare": "Atención médica",
-    "education": "Educación",
-    "technology": "Tecnología",
-    "consulting": "Consultoría",
-    "other": "Otro",
-    "selectBusinessType": "Selecciona tu tipo de negocio",
-    "businessInfo": "Información del negocio",
-    "businessName": "Nombre del negocio",
-    "businessAddress": "Dirección del negocio",
-    "businessPhone": "Teléfono del negocio",
-    "businessEmail": "Correo del negocio",
-    "businessLicense": "Licencia comercial",
-    "permitRequired": "Permiso requerido",
-    "licenseRequired": "Licencia requerida"
+  "businessTypes": {
+    "beautySalon": "Tengo un salón de belleza",
+    "restaurant": "Tengo un restaurante",
+    "retailStore": "Tengo una tienda minorista",
+    "coffeeShop": "Tengo una cafetería",
+    "barbershop": "Tengo una barbería",
+    "bakery": "Tengo una panadería",
+    "gym": "Tengo un gimnasio",
+    "autoRepair": "Tengo un taller de reparación de autos",
+    "laundry": "Tengo un servicio de lavandería",
+    "petGrooming": "Tengo un negocio de aseo de mascotas",
+    "tattooParlor": "Tengo un estudio de tatuajes",
+    "nailSalon": "Tengo un salón de uñas",
+    "photographyStudio": "Tengo un estudio de fotografía",
+    "consulting": "Tengo un negocio de consultoría",
+    "daycare": "Tengo un centro de cuidado infantil",
+    "cleaningService": "Tengo un servicio de limpieza",
+    "foodTruck": "Tengo un camión de comida",
+    "yogaStudio": "Tengo un estudio de yoga",
+    "musicSchool": "Tengo una escuela de música",
+    "danceStudio": "Tengo un estudio de baile",
+    "artGallery": "Tengo una galería de arte",
+    "bookstore": "Tengo una librería",
+    "florist": "Tengo una floristería",
+    "jewelryStore": "Tengo una joyería",
+    "vintageShop": "Tengo una tienda vintage",
+    "techStartup": "Tengo una startup tecnológica",
+    "dentalOffice": "Tengo una consulta dental",
+    "lawFirm": "Tengo un bufete de abogados",
+    "realEstate": "Tengo un negocio inmobiliario",
+    "insuranceAgency": "Tengo una agencia de seguros",
+    "accountingFirm": "Tengo una firma contable",
+    "marketingAgency": "Tengo una agencia de marketing",
+    "webDesign": "Tengo un negocio de diseño web",
+    "construction": "Tengo un negocio de construcción",
+    "landscaping": "Tengo un negocio de paisajismo",
+    "plumbing": "Tengo un negocio de plomería",
+    "electrical": "Tengo un negocio eléctrico",
+    "hvac": "Tengo un negocio de HVAC",
+    "roofing": "Tengo un negocio de techado",
+    "painting": "Tengo un negocio de pintura",
+    "carpentry": "Tengo un negocio de carpintería",
+    "other": "Tengo otro tipo de negocio"
+  },
+  "quickOptions": {
+    "businessLicense": "Licencia Comercial",
+    "parkingRules": "Reglas de Estacionamiento",
+    "permits": "Permisos",
+    "taxes": "Impuestos",
+    "zoning": "Zonificación",
+    "healthSafety": "Salud y Seguridad",
+    "employmentLaw": "Ley Laboral",
+    "insurance": "Seguros",
+    "accessibility": "Accesibilidad",
+    "marketing": "Marketing",
+    "grants": "Subvenciones",
+    "utilities": "Servicios Públicos",
+    "inspections": "Inspecciones",
+    "wasteDisposal": "Eliminación de Residuos",
+    "fireSafety": "Seguridad contra Incendios",
+    "security": "Seguridad",
+    "buildingCodes": "Códigos de Construcción",
+    "certifications": "Certificaciones",
+    "emergencies": "Emergencias",
+    "innovation": "Innovación",
+    "networking": "Redes Comerciales",
+    "financing": "Financiamiento Comercial",
+    "legalHelp": "Asistencia Legal",
+    "accounting": "Servicios Contables",
+    "technology": "Soporte Tecnológico",
+    "sustainability": "Negocio Verde",
+    "exportImport": "Comercio Internacional"
   },
   "permissions": {
     "title": "Permisos y Licencias",
