--- a/frontend/src/language/prs.json
+++ b/frontend/src/language/prs.json
@@ -87,16 +87,90 @@
     "voiceOutput": "خروجی صوتی",
     "thinking": "در حال فکر کردن...",
     "newMessage": "پیام جدید",
-    "clearChat": "پاک کردن گفتگو",
-    "exportChat": "صادر کردن گفتگو",
-    "chatHistory": "تاریخچه گفتگو",
+    "clearChat": "پاک کردن چت",
+    "exportChat": "صادر کردن چت",
+    "chatHistory": "تاریخچه چت",
     "noMessages": "هنوز پیامی وجود ندارد. گفتگو را شروع کنید!",
-    "messageError": "ارسال پیام ناموفق. لطفاً دوباره تلاش کنید.",
+    "messageError": "ارسال پیام ناموفق بود. لطفاً دوباره تلاش کنید.",
     "aiThinking": "هوش مصنوعی در حال فکر کردن است...",
     "aiResponding": "هوش مصنوعی در حال پاسخ دادن است...",
     "scrollToBottom": "اسکرول به پایین",
-    "copyMessage": "کپی پیام",
-    "messageCopied": "پیام در کلیپ‌بورد کپی شد"
+    "copyMessage": "کپی کردن پیام",
+    "messageCopied": "پیام در کلیپ‌بورد کپی شد",
+    "welcomeMessage": "من اینجا هستم تا به شما در مدیریت کسب‌وکارتان در اوکلند کمک کنم. هر سوالی در مورد مجوزها، جوازها، مقررات یا منابع کسب‌وکار محلی از من بپرسید."
+  },
+  "businessTypes": {
+    "beautySalon": "من یک سالن زیبایی دارم",
+    "restaurant": "من یک رستوران دارم",
+    "retailStore": "من یک فروشگاه خرده‌فروشی دارم",
+    "coffeeShop": "من یک کافه دارم",
+    "barbershop": "من یک آرایشگاه مردانه دارم",
+    "bakery": "من یک نانوایی دارم",
+    "gym": "من یک باشگاه ورزشی دارم",
+    "autoRepair": "من یک تعمیرگاه خودرو دارم",
+    "laundry": "من یک خدمات خشکشویی دارم",
+    "petGrooming": "من یک کسب‌وکار آرایش حیوانات خانگی دارم",
+    "tattooParlor": "من یک استودیو خالکوبی دارم",
+    "nailSalon": "من یک سالن ناخن دارم",
+    "photographyStudio": "من یک استودیو عکاسی دارم",
+    "consulting": "من یک کسب‌وکار مشاوره دارم",
+    "daycare": "من یک مرکز مراقبت از کودکان دارم",
+    "cleaningService": "من یک خدمات نظافت دارم",
+    "foodTruck": "من یک کامیون غذا دارم",
+    "yogaStudio": "من یک استودیو یوگا دارم",
+    "musicSchool": "من یک مدرسه موسیقی دارم",
+    "danceStudio": "من یک استودیو رقص دارم",
+    "artGallery": "من یک گالری هنری دارم",
+    "bookstore": "من یک کتابفروشی دارم",
+    "florist": "من یک گل‌فروشی دارم",
+    "jewelryStore": "من یک جواهرفروشی دارم",
+    "vintageShop": "من یک فروشگاه وینتیج دارم",
+    "techStartup": "من یک استارتاپ فناوری دارم",
+    "dentalOffice": "من یک مطب دندانپزشکی دارم",
+    "lawFirm": "من یک شرکت حقوقی دارم",
+    "realEstate": "من یک کسب‌وکار املاک دارم",
+    "insuranceAgency": "من یک نمایندگی بیمه دارم",
+    "accountingFirm": "من یک شرکت حسابداری دارم",
+    "marketingAgency": "من یک آژانس بازاریابی دارم",
+    "webDesign": "من یک کسب‌وکار طراحی وب دارم",
+    "construction": "من یک کسب‌وکار ساختمانی دارم",
+    "landscaping": "من یک کسب‌وکار محوطه‌سازی دارم",
+    "plumbing": "من یک کسب‌وکار لوله‌کشی دارم",
+    "electrical": "من یک کسب‌وکار برقی دارم",
+    "hvac": "من یک کسب‌وکار تهویه مطبوع دارم",
+    "roofing": "من یک کسب‌وکار سقف‌سازی دارم",
+    "painting": "من یک کسب‌وکار نقاشی دارم",
+    "carpentry": "من یک کسب‌وکار نجاری دارم",
+    "other": "من نوع دیگری از کسب‌وکار دارم"
+  },
+  "quickOptions": {
+    "businessLicense": "مجوز کسب‌وکار",
+    "parkingRules": "قوانین پارکینگ",
+    "permits": "جوازها",
+    "taxes": "مالیات",
+    "zoning": "منطقه‌بندی",
+    "healthSafety": "سلامت و ایمنی",
+    "employmentLaw": "قانون کار",
+    "insurance": "بیمه",
+    "accessibility": "دسترسی‌پذیری",
+    "marketing": "بازاریابی",
+    "grants": "کمک‌های مالی",
+    "utilities": "خدمات عمومی",
+    "inspections": "بازرسی‌ها",
+    "wasteDisposal": "دفع زباله",
+    "fireSafety": "ایمنی آتش",
+    "security": "امنیت",
+    "buildingCodes": "کدهای ساختمانی",
+    "certifications": "گواهینامه‌ها",
+    "emergencies": "اورژانس",
+    "innovation": "نوآوری",
+    "networking": "شبکه‌سازی کسب‌وکار",
+    "financing": "تأمین مالی کسب‌وکار",
+    "legalHelp": "کمک حقوقی",
+    "accounting": "خدمات حسابداری",
+    "technology": "پشتیبانی فناوری",
+    "sustainability": "کسب‌وکار سبز",
+    "exportImport": "تجارت بین‌المللی"
   },
   "business": {
     "businessType": "نوع کسب‌وکار",
