--- a/frontend/src/language/vi.json
+++ b/frontend/src/language/vi.json
@@ -81,44 +81,96 @@
   "chat": {
     "title": "Trợ lý AI Oakland",
     "subtitle": "Hỗ trợ thông minh cho doanh nghiệp nhỏ tại Oakland",
-    "placeholder": "Nhập tin nhắn của bạn ở đây...",
+    "placeholder": "Nhập tin nhắn của bạn tại đây...",
     "send": "Gửi",
     "voiceInput": "Nhập giọng nói",
-    "voiceOutput": "Phát giọng nói",
+    "voiceOutput": "Xuất giọng nói",
     "thinking": "Đang suy nghĩ...",
     "newMessage": "Tin nhắn mới",
-    "clearChat": "Xóa trò chuyện",
-    "exportChat": "Xuất trò chuyện",
-    "chatHistory": "Lịch sử trò chuyện",
+    "clearChat": "Xóa chat",
+    "exportChat": "Xuất chat",
+    "chatHistory": "Lịch sử chat",
     "noMessages": "Chưa có tin nhắn nào. Hãy bắt đầu cuộc trò chuyện!",
-    "messageError": "Không thể gửi tin nhắn. Vui lòng thử lại.",
+    "messageError": "Gửi tin nhắn thất bại. Vui lòng thử lại.",
     "aiThinking": "AI đang suy nghĩ...",
     "aiResponding": "AI đang trả lời...",
     "scrollToBottom": "Cuộn xuống dưới",
     "copyMessage": "Sao chép tin nhắn",
-    "messageCopied": "Đã sao chép tin nhắn vào bộ nhớ tạm"
+    "messageCopied": "Đã sao chép tin nhắn vào bộ nhớ tạm",
+    "welcomeMessage": "Tôi ở đây để giúp bạn điều hướng việc điều hành doanh nghiệp tại Oakland. Hãy hỏi tôi bất cứ điều gì về giấy phép, giấy tờ, quy định hoặc tài nguyên kinh doanh địa phương."
   },
-  "business": {
-    "businessType": "Loại hình kinh doanh",
-    "restaurant": "Nhà hàng",
-    "retail": "Cửa hàng bán lẻ",
-    "service": "Dịch vụ kinh doanh",
-    "manufacturing": "Sản xuất",
-    "construction": "Xây dựng",
-    "healthcare": "Chăm sóc sức khỏe",
-    "education": "Giáo dục",
-    "technology": "Công nghệ",
-    "consulting": "Tư vấn",
-    "other": "Khác",
-    "selectBusinessType": "Chọn loại hình kinh doanh của bạn",
-    "businessInfo": "Thông tin doanh nghiệp",
-    "businessName": "Tên doanh nghiệp",
-    "businessAddress": "Địa chỉ doanh nghiệp",
-    "businessPhone": "Điện thoại doanh nghiệp",
-    "businessEmail": "Email doanh nghiệp",
+  "businessTypes": {
+    "beautySalon": "Tôi có một salon làm đẹp",
+    "restaurant": "Tôi có một nhà hàng",
+    "retailStore": "Tôi có một cửa hàng bán lẻ",
+    "coffeeShop": "Tôi có một quán cà phê",
+    "barbershop": "Tôi có một tiệm cắt tóc",
+    "bakery": "Tôi có một tiệm bánh",
+    "gym": "Tôi có một phòng tập gym",
+    "autoRepair": "Tôi có một tiệm sửa xe",
+    "laundry": "Tôi có một dịch vụ giặt ủi",
+    "petGrooming": "Tôi có một doanh nghiệp chăm sóc thú cưng",
+    "tattooParlor": "Tôi có một studio xăm hình",
+    "nailSalon": "Tôi có một salon làm móng",
+    "photographyStudio": "Tôi có một studio chụp ảnh",
+    "consulting": "Tôi có một doanh nghiệp tư vấn",
+    "daycare": "Tôi có một trung tâm chăm sóc trẻ em",
+    "cleaningService": "Tôi có một dịch vụ dọn dẹp",
+    "foodTruck": "Tôi có một xe bán thức ăn",
+    "yogaStudio": "Tôi có một studio yoga",
+    "musicSchool": "Tôi có một trường âm nhạc",
+    "danceStudio": "Tôi có một studio nhảy múa",
+    "artGallery": "Tôi có một phòng trưng bày nghệ thuật",
+    "bookstore": "Tôi có một hiệu sách",
+    "florist": "Tôi có một tiệm hoa",
+    "jewelryStore": "Tôi có một tiệm trang sức",
+    "vintageShop": "Tôi có một cửa hàng vintage",
+    "techStartup": "Tôi có một startup công nghệ",
+    "dentalOffice": "Tôi có một phòng khám nha khoa",
+    "lawFirm": "Tôi có một công ty luật",
+    "realEstate": "Tôi có một doanh nghiệp bất động sản",
+    "insuranceAgency": "Tôi có một đại lý bảo hiểm",
+    "accountingFirm": "Tôi có một công ty kế toán",
+    "marketingAgency": "Tôi có một đại lý marketing",
+    "webDesign": "Tôi có một doanh nghiệp thiết kế web",
+    "construction": "Tôi có một doanh nghiệp xây dựng",
+    "landscaping": "Tôi có một doanh nghiệp cảnh quan",
+    "plumbing": "Tôi có một doanh nghiệp ống nước",
+    "electrical": "Tôi có một doanh nghiệp điện",
+    "hvac": "Tôi có một doanh nghiệp HVAC",
+    "roofing": "Tôi có một doanh nghiệp lợp mái",
+    "painting": "Tôi có một doanh nghiệp sơn",
+    "carpentry": "Tôi có một doanh nghiệp mộc",
+    "other": "Tôi có một loại doanh nghiệp khác"
+  },
+  "quickOptions": {
     "businessLicense": "Giấy phép kinh doanh",
-    "permitRequired": "Giấy phép yêu cầu",
-    "licenseRequired": "Giấy phép yêu cầu"
+    "parkingRules": "Quy tắc đỗ xe",
+    "permits": "Giấy phép",
+    "taxes": "Thuế",
+    "zoning": "Quy hoạch",
+    "healthSafety": "Sức khỏe & An toàn",
+    "employmentLaw": "Luật Lao động",
+    "insurance": "Bảo hiểm",
+    "accessibility": "Khả năng tiếp cận",
+    "marketing": "Marketing",
+    "grants": "Trợ cấp",
+    "utilities": "Tiện ích",
+    "inspections": "Kiểm tra",
+    "wasteDisposal": "Xử lý chất thải",
+    "fireSafety": "An toàn cháy nổ",
+    "security": "Bảo mật",
+    "buildingCodes": "Mã xây dựng",
+    "certifications": "Chứng nhận",
+    "emergencies": "Tình huống khẩn cấp",
+    "innovation": "Đổi mới",
+    "networking": "Kết nối kinh doanh",
+    "financing": "Tài chính kinh doanh",
+    "legalHelp": "Hỗ trợ pháp lý",
+    "accounting": "Dịch vụ kế toán",
+    "technology": "Hỗ trợ công nghệ",
+    "sustainability": "Kinh doanh xanh",
+    "exportImport": "Thương mại quốc tế"
   },
   "permissions": {
     "title": "Giấy phép & Chứng chỉ",
