--- a/frontend/src/language/zh.json
+++ b/frontend/src/language/zh.json
@@ -91,12 +91,86 @@
     "exportChat": "导出聊天",
     "chatHistory": "聊天历史",
     "noMessages": "还没有消息。开始对话吧！",
-    "messageError": "发送消息失败，请重试。",
+    "messageError": "发送消息失败。请重试。",
     "aiThinking": "AI正在思考...",
     "aiResponding": "AI正在回复...",
     "scrollToBottom": "滚动到底部",
     "copyMessage": "复制消息",
-    "messageCopied": "消息已复制到剪贴板"
+    "messageCopied": "消息已复制到剪贴板",
+    "welcomeMessage": "我在这里帮助您了解在奥克兰经营企业的方方面面。请询问我任何关于许可证、许可、法规或当地商业资源的问题。"
+  },
+  "businessTypes": {
+    "beautySalon": "我拥有一家美容院",
+    "restaurant": "我拥有一家餐厅",
+    "retailStore": "我拥有一家零售店",
+    "coffeeShop": "我拥有一家咖啡店",
+    "barbershop": "我拥有一家理发店",
+    "bakery": "我拥有一家面包店",
+    "gym": "我拥有一家健身房",
+    "autoRepair": "我拥有一家汽车修理店",
+    "laundry": "我拥有一家洗衣服务",
+    "petGrooming": "我拥有一家宠物美容企业",
+    "tattooParlor": "我拥有一家纹身店",
+    "nailSalon": "我拥有一家美甲沙龙",
+    "photographyStudio": "我拥有一家摄影工作室",
+    "consulting": "我拥有一家咨询企业",
+    "daycare": "我拥有一家日托中心",
+    "cleaningService": "我拥有一家清洁服务",
+    "foodTruck": "我拥有一辆食品车",
+    "yogaStudio": "我拥有一家瑜伽工作室",
+    "musicSchool": "我拥有一家音乐学校",
+    "danceStudio": "我拥有一家舞蹈工作室",
+    "artGallery": "我拥有一家艺术画廊",
+    "bookstore": "我拥有一家书店",
+    "florist": "我拥有一家花店",
+    "jewelryStore": "我拥有一家珠宝店",
+    "vintageShop": "我拥有一家复古店",
+    "techStartup": "我拥有一家科技创业公司",
+    "dentalOffice": "我拥有一家牙科诊所",
+    "lawFirm": "我拥有一家律师事务所",
+    "realEstate": "我拥有一家房地产企业",
+    "insuranceAgency": "我拥有一家保险代理",
+    "accountingFirm": "我拥有一家会计事务所",
+    "marketingAgency": "我拥有一家营销代理",
+    "webDesign": "我拥有一家网页设计企业",
+    "construction": "我拥有一家建筑企业",
+    "landscaping": "我拥有一家景观美化企业",
+    "plumbing": "我拥有一家管道企业",
+    "electrical": "我拥有一家电气企业",
+    "hvac": "我拥有一家暖通空调企业",
+    "roofing": "我拥有一家屋顶企业",
+    "painting": "我拥有一家油漆企业",
+    "carpentry": "我拥有一家木工企业",
+    "other": "我拥有另一种类型的企业"
+  },
+  "quickOptions": {
+    "businessLicense": "营业执照",
+    "parkingRules": "停车规则",
+    "permits": "许可证",
+    "taxes": "税收",
+    "zoning": "分区规划",
+    "healthSafety": "健康与安全",
+    "employmentLaw": "劳动法",
+    "insurance": "保险",
+    "accessibility": "无障碍设施",
+    "marketing": "营销",
+    "grants": "补助金",
+    "utilities": "公用事业",
+    "inspections": "检查",
+    "wasteDisposal": "废物处理",
+    "fireSafety": "消防安全",
+    "security": "安全",
+    "buildingCodes": "建筑规范",
+    "certifications": "认证",
+    "emergencies": "紧急情况",
+    "innovation": "创新",
+    "networking": "商业网络",
+    "financing": "商业融资",
+    "legalHelp": "法律援助",
+    "accounting": "会计服务",
+    "technology": "技术支持",
+    "sustainability": "绿色企业",
+    "exportImport": "国际贸易"
   },
   "business": {
     "businessType": "企业类型",
